// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown Button should render a block dropdown type 1`] = `
<OnClickOutside(DropdownButtonBase)
  buttonRef={[Function]}
  eventTypes={
    Array [
      "mousedown",
      "touchstart",
    ]
  }
  excludeScrollbar={false}
  isBlock={true}
  isCompact={false}
  isDisabled={false}
  isKeyboardEvent={false}
  isOpen={false}
  items={
    <Item
      label="1st Option"
      onSelect={[Function]}
    />
  }
  onClickOutside={[Function]}
  outsideClickIgnoreClass="ignore-react-onclickoutside"
  position="bottom"
  preventDefault={false}
  refCallback={[Function]}
  requestClose={[Function]}
  stopPropagation={false}
>
  <button
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup="menu"
    className="dropdown-button neutral is-block"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="dropdown-button-text"
    >
      Primary Option
    </span>
    <span
      className="caret-icon"
    />
  </button>
</OnClickOutside(DropdownButtonBase)>
`;

exports[`Dropdown Button should render a compact dropdown type 1`] = `
<OnClickOutside(DropdownButtonBase)
  buttonRef={[Function]}
  eventTypes={
    Array [
      "mousedown",
      "touchstart",
    ]
  }
  excludeScrollbar={false}
  isBlock={false}
  isCompact={true}
  isDisabled={false}
  isKeyboardEvent={false}
  isOpen={false}
  items={
    <Item
      label="1st Option"
      onSelect={[Function]}
    />
  }
  onClickOutside={[Function]}
  outsideClickIgnoreClass="ignore-react-onclickoutside"
  position="bottom"
  preventDefault={false}
  refCallback={[Function]}
  requestClose={[Function]}
  stopPropagation={false}
>
  <button
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup="menu"
    className="dropdown-button neutral is-compact"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="dropdown-button-text"
    >
      Primary Option
    </span>
    <span
      className="caret-icon"
    />
  </button>
</OnClickOutside(DropdownButtonBase)>
`;

exports[`Dropdown Button should render a default dropdown type 1`] = `
<OnClickOutside(DropdownButtonBase)
  buttonRef={[Function]}
  eventTypes={
    Array [
      "mousedown",
      "touchstart",
    ]
  }
  excludeScrollbar={false}
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isKeyboardEvent={false}
  isOpen={false}
  items={
    <Item
      label="1st Option"
      onSelect={[Function]}
    />
  }
  onClickOutside={[Function]}
  outsideClickIgnoreClass="ignore-react-onclickoutside"
  position="bottom"
  preventDefault={false}
  refCallback={[Function]}
  requestClose={[Function]}
  stopPropagation={false}
>
  <button
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup="menu"
    className="dropdown-button neutral"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="dropdown-button-text"
    >
      Primary Option
    </span>
    <span
      className="caret-icon"
    />
  </button>
</OnClickOutside(DropdownButtonBase)>
`;

exports[`Dropdown Button should render a disabled dropdown type 1`] = `
<OnClickOutside(DropdownButtonBase)
  buttonRef={[Function]}
  eventTypes={
    Array [
      "mousedown",
      "touchstart",
    ]
  }
  excludeScrollbar={false}
  isBlock={false}
  isCompact={false}
  isDisabled={true}
  isKeyboardEvent={false}
  isOpen={false}
  items={
    <Item
      label="1st Option"
      onSelect={[Function]}
    />
  }
  onClickOutside={[Function]}
  outsideClickIgnoreClass="ignore-react-onclickoutside"
  position="bottom"
  preventDefault={false}
  refCallback={[Function]}
  requestClose={[Function]}
  stopPropagation={false}
>
  <button
    aria-disabled={true}
    aria-expanded={false}
    aria-haspopup="menu"
    className="dropdown-button neutral"
    disabled={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    tabIndex="-1"
    type="button"
  >
    <span
      className="dropdown-button-text"
    >
      Primary Option
    </span>
    <span
      className="caret-icon"
    />
  </button>
</OnClickOutside(DropdownButtonBase)>
`;

exports[`Dropdown Button should render a split type with custom attributes 1`] = `
<OnClickOutside(DropdownButtonBase)
  buttonRef={[Function]}
  eventTypes={
    Array [
      "mousedown",
      "touchstart",
    ]
  }
  excludeScrollbar={false}
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isKeyboardEvent={false}
  isOpen={false}
  items={
    <Item
      label="1st Option"
      onSelect={[Function]}
    />
  }
  onClickOutside={[Function]}
  other-custom-attribute="purple"
  outsideClickIgnoreClass="ignore-react-onclickoutside"
  position="bottom"
  preventDefault={false}
  refCallback={[Function]}
  requestClose={[Function]}
  stopPropagation={false}
  test-custom-attribute={true}
>
  <button
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup="menu"
    className="dropdown-button neutral"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="dropdown-button-text"
    >
      Primary Option
    </span>
    <span
      className="caret-icon"
    />
  </button>
</OnClickOutside(DropdownButtonBase)>
`;

exports[`Dropdown Button should render a split type with multiple children 1`] = `
<OnClickOutside(DropdownButtonBase)
  buttonRef={[Function]}
  eventTypes={
    Array [
      "mousedown",
      "touchstart",
    ]
  }
  excludeScrollbar={false}
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isKeyboardEvent={false}
  isOpen={false}
  items={
    Array [
      <Item
        label="1st Option"
        onSelect={[Function]}
      />,
      <Item
        label="2nd Option"
        onSelect={[Function]}
      />,
      <Item
        label="3rd Option"
        onSelect={[Function]}
      />,
    ]
  }
  onClickOutside={[Function]}
  onSelect={[Function]}
  outsideClickIgnoreClass="ignore-react-onclickoutside"
  position="bottom"
  preventDefault={false}
  refCallback={[Function]}
  requestClose={[Function]}
  stopPropagation={false}
>
  <button
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup="menu"
    className="dropdown-button neutral"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="dropdown-button-text"
    >
      Primary Option
    </span>
    <span
      className="caret-icon"
    />
  </button>
</OnClickOutside(DropdownButtonBase)>
`;

exports[`Dropdown Button should render an emphasis dropdown type 1`] = `
<OnClickOutside(DropdownButtonBase)
  buttonRef={[Function]}
  eventTypes={
    Array [
      "mousedown",
      "touchstart",
    ]
  }
  excludeScrollbar={false}
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isKeyboardEvent={false}
  isOpen={false}
  items={
    <Item
      label="1st Option"
      onSelect={[Function]}
    />
  }
  onClickOutside={[Function]}
  outsideClickIgnoreClass="ignore-react-onclickoutside"
  position="bottom"
  preventDefault={false}
  refCallback={[Function]}
  requestClose={[Function]}
  stopPropagation={false}
>
  <button
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup="menu"
    className="dropdown-button emphasis"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="dropdown-button-text"
    >
      Primary Option
    </span>
    <span
      className="caret-icon"
    />
  </button>
</OnClickOutside(DropdownButtonBase)>
`;

exports[`Dropdown Button should render an open dropdown 1`] = `
<OnClickOutside(DropdownButtonBase)
  buttonRef={[Function]}
  eventTypes={
    Array [
      "mousedown",
      "touchstart",
    ]
  }
  excludeScrollbar={false}
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isKeyboardEvent={false}
  isOpen={true}
  items={
    <Item
      label="1st Option"
      onSelect={[Function]}
    />
  }
  onClickOutside={[Function]}
  outsideClickIgnoreClass="ignore-react-onclickoutside"
  position="bottom"
  preventDefault={false}
  refCallback={[Function]}
  requestClose={[Function]}
  stopPropagation={false}
>
  <button
    aria-disabled={false}
    aria-expanded={true}
    aria-haspopup="menu"
    className="dropdown-button neutral is-active ignore-react-onclickoutside"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="dropdown-button-text"
    >
      Primary Option
    </span>
    <span
      className="caret-icon"
    />
  </button>
</OnClickOutside(DropdownButtonBase)>
`;
